[package]
name = "codegen_template"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
readme = "README.md"
description = "A templating macro to generate Rust code into a buffer."

[lib]
proc-macro = true

[dependencies]
# String scanner
# Utility to parse rust identifiers
unicode-xid = "0.2.4"
unscanny = "0.1.0"
